@@ -1,7 +1,9 @@
 package io.liftandshift.strikebench.recommend;
+import static io.liftandshift.strikebench.util.Numbers.round2;
 
 import io.liftandshift.strikebench.market.MarketDataService;
 import io.liftandshift.strikebench.market.MarketHours;
+import io.liftandshift.strikebench.market.EventService;
 import io.liftandshift.strikebench.model.Freshness;
 import io.liftandshift.strikebench.model.Leg;
 import io.liftandshift.strikebench.model.LegAction;
@@ -12,10 +14,12 @@ import io.liftandshift.strikebench.model.Quote;
 import io.liftandshift.strikebench.pricing.BlackScholes;
 import io.liftandshift.strikebench.pricing.PayoffCurve;
 import io.liftandshift.strikebench.strategy.Guardrails;
+import io.liftandshift.strikebench.strategy.IronCondorQuality;
 import io.liftandshift.strikebench.strategy.StrategyBuilder;
 import io.liftandshift.strikebench.strategy.StrategyFamily;
 import io.liftandshift.strikebench.strategy.StrategyIntent;
 import io.liftandshift.strikebench.strategy.Verdict;
+import io.liftandshift.strikebench.util.Fees;
 import io.liftandshift.strikebench.util.Money;
 
 import java.math.BigDecimal;
@@ -42,7 +46,8 @@ public final class RecommendationEngine {
             + "current (possibly delayed or simulated) data. Options involve substantial risk; you can lose the "
             + "entire amount at risk and, in undefined-risk strategies, more. Nothing here promises any profit. "
             + "POP and market EV use a present-value risk-neutral lognormal approximation at the lane's "
-            + "risk-free rate (q=0 dividend-yield assumption); breakevens are payoff geometry. Raw model outputs "
+            + "risk-free rate (q=0 dividend-yield assumption); market EV is a price/cost benchmark, not an "
+            + "independent edge forecast; breakevens are payoff geometry. Raw model outputs "
             + "exclude commissions; any EV labeled after costs subtracts the disclosed estimated round-trip commissions.";
 
     /** Structural shape group — delegates to the catalog's explicit metadata (presentation only). */
@@ -85,10 +90,22 @@ public final class RecommendationEngine {
             List<String> allowedStrategies, // optional whitelist
             Boolean avoidEarnings,
             Boolean allow0dte,
-            String intent,               // StrategyIntent name; null/blank = DIRECTIONAL (historic behavior)
+            String intent,               // explicit StrategyIntent at every product/API decision boundary
             Holdings holdings,           // shares context for EXIT/HEDGE/ACQUIRE flows, optional
             Filters filters              // hard screens on candidate metrics, optional
-    ) {}
+    ) {
+        /** A copy with the risk-capital-capped per-trade budget; every other field unchanged. */
+        public Request withMaxLossCents(Long cappedMaxLossCents) {
+            return new Request(symbol, thesis, horizon, riskMode, cappedMaxLossCents, maxRiskPctOfAccount,
+                    minConfidence, allowedStrategies, avoidEarnings, allow0dte, intent, holdings, filters);
+        }
+
+        /** A copy carrying the account's real share position; every other field unchanged. */
+        public Request withHoldings(Holdings resolvedHoldings) {
+            return new Request(symbol, thesis, horizon, riskMode, maxLossCents, maxRiskPctOfAccount,
+                    minConfidence, allowedStrategies, avoidEarnings, allow0dte, intent, resolvedHoldings, filters);
+        }
+    }
 
     /**
      * Shares context. sharesOwned must be the FREE (unlocked) share count; costBasisCents is the
@@ -112,6 +129,8 @@ public final class RecommendationEngine {
             String riskMode,
             String intent,
             long riskBudgetCents,
+            /** The underlying price every candidate was priced against, for payoff axes; null when no chain loaded. */
+            Long spotCents,
             List<Candidate> candidates,
             List<Rejection> rejected,
             List<String> notes,
@@ -120,12 +139,18 @@ public final class RecommendationEngine {
 
     private final MarketDataService market;
     private final Clock clock;
+    private final EventService events;
     private long feePerContractCents;
     private long feePerOrderCents;
 
     public RecommendationEngine(MarketDataService market, Clock clock) {
+        this(market, clock, new EventService(market, clock));
+    }
+
+    public RecommendationEngine(MarketDataService market, Clock clock, EventService events) {
         this.market = market;
         this.clock = clock;
+        this.events = java.util.Objects.requireNonNull(events, "events");
     }
 
     /** Candidate income/effective-price metrics use the same opening commission as the ticket. */
@@ -136,7 +161,7 @@ public final class RecommendationEngine {
     }
 
     public LocalDate marketDate(String worldId) {
-        return LocalDate.ofInstant(market.simInstant(worldId).orElseGet(clock::instant), MarketHours.EASTERN);
+        return market.laneToday(worldId, clock);
     }
 
     public Result recommend(Request req, long buyingPowerCents) {
@@ -146,14 +171,10 @@ public final class RecommendationEngine {
     /** World-aware: inside a SIMULATED session, recommendations price against THAT world —
      *  the whole point of a reviewer market. null = observed (the real-lane rule stands). */
     public Result recommend(Request req, long buyingPowerCents, String worldId) {
-        return recommendInner(req, buyingPowerCents, worldId);
-    }
-
-    private Result recommendInner(Request req, long buyingPowerCents, String worldId) {
         String symbol = req.symbol() == null ? "" : req.symbol().trim().toUpperCase(Locale.ROOT);
         RiskMode mode = RiskMode.parse(req.riskMode());
         StrategyIntent intent = StrategyIntent.parse(req.intent());
-        boolean thesisExplicit = req.thesis() != null && !req.thesis().isBlank();
+        String horizon = effectiveHorizon(req.horizon(), intent);
         StrategyFamily.Thesis thesis = parseThesis(req.thesis());
         Holdings holdings = req.holdings();
         int freeShares = holdings != null && holdings.sharesOwned() != null ? Math.max(0, holdings.sharesOwned()) : 0;
@@ -162,23 +183,21 @@ public final class RecommendationEngine {
         Filters filters = req.filters() == null ? new Filters(null, null, null, null) : req.filters();
         boolean allow0dte = Boolean.TRUE.equals(req.allow0dte());
         boolean avoidEarnings = req.avoidEarnings() == null || req.avoidEarnings();
-        double riskPct = req.maxRiskPctOfAccount() != null ? Math.clamp(req.maxRiskPctOfAccount(), 0.001, 0.5) : mode.defaultRiskPct;
-        long budget = Math.round(buyingPowerCents * riskPct);
-        if (req.maxLossCents() != null && req.maxLossCents() > 0) budget = Math.min(budget, req.maxLossCents());
+        long riskBudget = RiskBudgetPolicy.requestBudgetCents(
+                mode, buyingPowerCents, req.maxRiskPctOfAccount(), req.maxLossCents());
+        long budget = riskBudget;
         double minConfidence = req.minConfidence() == null ? 0 : req.minConfidence();
 
         List<String> notes = new ArrayList<>();
-        // ONE CLOCK PER LANE: a simulated session's clock is always in-session while it runs —
-        // the observed market being closed says nothing about THIS market (review P2).
-        java.time.Instant laneNow = market.simInstant(worldId).orElseGet(clock::instant);
-        if (worldId == null && !MarketHours.isRegularSession(laneNow)) {
-            notes.add("The market is closed — prices and strikes here are anchored to the PRIOR CLOSE, "
-                    + "not a live quote, and can shift at the next open.");
+        if (req.horizon() == null || req.horizon().isBlank()) {
+            notes.add(intent == StrategyIntent.INCOME
+                    ? "No horizon was supplied to this internal engine call; using an explicit 30-session income cycle. Product decision routes still require the user-owned horizon to be persisted before ranking."
+                    : "No horizon was supplied to this internal engine call; using the month analysis bucket. Product decision routes still require an explicit persisted horizon.");
         }
         // Buying shares at a discount commits the full purchase price by design — a cash-secured
         // put reserves strike x 100. Capping that by a small risk-% would reject every candidate,
         // so the ACQUIRE flow caps by available cash instead (unless the user set explicit limits).
-        if (StrategyIntent.parse(req.intent()) == StrategyIntent.ACQUIRE
+        if (intent == StrategyIntent.ACQUIRE
                 && req.maxRiskPctOfAccount() == null && req.maxLossCents() == null) {
             budget = buyingPowerCents;
             notes.add("Acquire flow: capital is capped by your buying power, not the risk-mode budget — "
@@ -187,56 +206,46 @@ public final class RecommendationEngine {
         List<Rejection> rejected = new ArrayList<>();
         List<Candidate> candidates = new ArrayList<>();
 
-        var lane = market.lane(worldId);
-        Quote quote = market.quote(symbol, worldId).orElse(null);
-        if (quote == null) {
-            notes.add(missingMarketDataNote(lane, symbol));
-            return new Result(symbol, thesis.name(), req.horizon(), mode.name(), intent.name(), budget, List.of(), rejected, notes, DISCLAIMER);
+        SymbolReady ready = preflightSymbol(symbol, worldId, notes);
+        if (ready == null) {
+            return new Result(symbol, thesis.name(), horizon, mode.name(), intent.name(), budget, null, List.of(), rejected, notes, DISCLAIMER);
         }
-        if (!quote.evidence().usableIn(lane)) {
-            notes.add("No " + lane + "-lane quote is available for " + symbol + "; refusing to substitute "
-                    + quote.evidence().provenance() + " data from " + quote.evidence().source());
-            return new Result(symbol, thesis.name(), req.horizon(), mode.name(), intent.name(), budget,
-                    List.of(), rejected, notes, DISCLAIMER);
+        var lane = ready.lane();
+        Quote quote = ready.quote();
+        List<LocalDate> expirations = ready.expirations();
+        java.time.Instant laneNow = ready.laneNow();
+        LocalDate today = ready.today();
+        // DYNAMIC EXPIRY (engine remediation): the horizon is an ANCHOR, not a rigid bucket. Gather
+        // the liquid, executable-chain expirations near it and let each family pick the one where it
+        // is most profitable — instead of forcing one quantized date whose chain may be empty/thin,
+        // which silently produced NOTHING for ~half of observed symbols.
+        int anchorDays = horizonAnchorCalendarDays(horizon);
+        if (anchorDays == 0 && !allow0dte) {
+            notes.add("0DTE horizon requested but same-day expiration is disabled (allow0dte=false); using the nearest expiration instead");
         }
-        List<LocalDate> expirations = market.expirations(symbol, worldId);
-        if (!quote.optionable() || expirations.isEmpty()) {
-            notes.add(symbol + " has no listed options (mutual funds and some securities cannot be traded with options)");
-            return new Result(symbol, thesis.name(), req.horizon(), mode.name(), intent.name(), budget, List.of(), rejected, notes, DISCLAIMER);
+        List<ExpiryCtx> contexts = expiryContexts(symbol, worldId, expirations, anchorDays, today, laneNow, lane,
+                allow0dte, MAX_EXPIRY_CANDIDATES);
+        if (contexts.isEmpty()) {
+            notes.add("The " + lane + " market has no analyzable same-lane option chain for " + symbol
+                    + " near a " + anchorDays + "-day horizon — nearby expirations were empty,"
+                    + " one-sided, or belonged to another market lane.");
+            return new Result(symbol, thesis.name(), horizon, mode.name(), intent.name(), budget,
+                    null, List.of(), rejected, notes, DISCLAIMER);
         }
-
-        LocalDate today = LocalDate.ofInstant(laneNow, MarketHours.EASTERN);
-        LocalDate near = pickExpiration(expirations, req.horizon(), today, allow0dte, laneNow, notes);
-        if (near == null) {
-            notes.add("No expiration matches the requested horizon");
-            return new Result(symbol, thesis.name(), req.horizon(), mode.name(), intent.name(), budget, List.of(), rejected, notes, DISCLAIMER);
-        }
-        OptionChain chain = market.chain(symbol, near, worldId).orElse(null);
-        if (chain == null || chain.isEmpty()) {
-            notes.add("Option chain unavailable for " + symbol + " " + near);
-            return new Result(symbol, thesis.name(), req.horizon(), mode.name(), intent.name(), budget, List.of(), rejected, notes, DISCLAIMER);
-        }
-        if (!chain.evidence().executableIn(lane)) {
-            notes.add("The " + lane + " market has no executable option chain for " + symbol + " " + near
-                    + "; refusing " + chain.evidence().provenance() + " data from " + chain.evidence().source());
-            return new Result(symbol, thesis.name(), req.horizon(), mode.name(), intent.name(), budget,
-                    List.of(), rejected, notes, DISCLAIMER);
-        }
-        // Far expiration for calendars/diagonals: ~4 weekly slots beyond the near one
-        int nearIdx = expirations.indexOf(near);
-        LocalDate far = nearIdx >= 0 && nearIdx + 4 < expirations.size() ? expirations.get(nearIdx + 4)
-                : expirations.getLast().isAfter(near) ? expirations.getLast() : null;
-        OptionChain farChain = far == null ? null : market.chain(symbol, far, worldId).orElse(null);
-        if (farChain != null && !farChain.evidence().executableIn(lane)) farChain = null;
-
-        var rateQuote = market.riskFreeRateQuote((int) Math.max(1, ChronoUnit.DAYS.between(today, near)), worldId);
-        double riskFreeRate = rateQuote.annualRate();
-
-        BigDecimal spot = chain.underlyingPrice();
-        boolean earningsSoon = market.news(symbol, worldId).stream().anyMatch(n -> {
-            String h = n.headline() == null ? "" : n.headline().toLowerCase(Locale.ROOT);
-            return h.contains("earnings") || h.contains("guidance") || h.contains("results");
-        });
+        // The anchor context drives the expiry-independent setup (spot, teaching examples, notes).
+        // Every viable package from the nearby expiry set survives construction. The existing
+        // DecisionPolicy evaluates the complete field and only then chooses one package per family;
+        // construction must not pre-empt that evidence- and after-cost-aware judgment.
+        ExpiryCtx anchorCtx = contexts.get(0);
+        OptionChain chain = anchorCtx.chain();
+        OptionChain farChain = anchorCtx.farChain();
+        double riskFreeRate = anchorCtx.riskFreeRate();
+        LocalDate near = anchorCtx.near();
+        BigDecimal spot = anchorCtx.spot();
+        // One canonical event receipt owns candidate timing. Generated worlds never borrow it.
+        EventService.EventEvidence eventEvidence = lane == io.liftandshift.strikebench.market.MarketLane.OBSERVED
+                ? events.earnings(symbol) : events.unavailableForContext(symbol,
+                    "simulated and Demo candidates do not borrow Observed issuer events");
 
         // Intent-flow context: hold-based intents can write against shares the user already owns.
         boolean holdBasedIntent = intent == StrategyIntent.EXIT || intent == StrategyIntent.HEDGE;
@@ -256,12 +265,26 @@ public final class RecommendationEngine {
 
         for (StrategyFamily family : StrategyFamily.values()) {
             if (intent == StrategyIntent.DIRECTIONAL) {
+                // A directional bet IS a thesis, so the declared view hard-selects the structure side.
                 if (!family.fits(thesis)) continue;
+                // ...but a directional scan expresses a market VIEW with option structures. Share-backed
+                // and cash-secured families (covered calls, cash-secured puts, protective puts/collars)
+                // are about holdings, income, or protection — not a directional bet — and must never
+                // surface here even when they fit the view (a protective collar is not a directional
+                // idea; it was ranking as the top "directional" allocation). Pure-option view
+                // expressions — spreads, condors, butterflies, calendars, diagonals — stay.
+                if (family.needsStock() || family == StrategyFamily.CASH_SECURED_PUT) continue;
             } else {
-                // Intent flows pick families by purpose; an explicit thesis narrows further.
+                // OBJECTIVE FLOWS (income / acquire / exit / hedge): pick families by PURPOSE. The
+                // market view is a RANKING TILT and a per-candidate teaching note here, NEVER a
+                // catalog gate — matching the product contract that the view is "only meaningful for
+                // directional or hedging objectives" and "conditions ranking." Hard-filtering an
+                // objective flow on an explicit view collapsed the educational fan to a single trade
+                // (e.g. "earn income · bearish" surfaced ONLY a bear call spread, hiding the condor,
+                // butterfly, calendars and the credit put spread). Offer every intent-serving family;
+                // the coherence gate below keeps each offered structure honest to the objective.
                 if (!family.servesIntent(intent) && !family.blockedByDefault()) continue;
                 if (family.blockedByDefault() && !family.servesIntent(intent)) continue;
-                if (thesisExplicit && !family.fits(thesis)) continue;
             }
             // RISK MODE IS A BUDGET, NOT A COMPLEXITY LADDER (risk/experience decoupling): every
             // mode sees the SAME defined-risk catalog — the actual position's max loss, EV, tail,
@@ -272,71 +295,135 @@ public final class RecommendationEngine {
                 continue;
             }
 
-            StrategyBuilder.Built built = StrategyBuilder.build(family, chain, farChain, spot, hints);
-            if (built == null) continue;
-            boolean builtOnHeldShares = sharesHeld && family.needsStock();
+            // Complete catalog accounting: undefined-risk families are legitimate structures to
+            // study, but they are never auto-recommendations. Name every applicable exclusion in
+            // rejected[] instead of silently omitting families whose builder deliberately returns
+            // null (short straddles/strangles). This lets clients distinguish "not suitable" from
+            // "the engine forgot this strategy" without weakening the safety policy.
+            if (family.blockedByDefault()) {
+                rejected.add(new Rejection(family.name(), family.display(), List.of(
+                        family.display() + " has undefined risk and is blocked by default; "
+                                + "it remains available for payoff education, while automatic ideas use a defined-risk alternative.")));
+                continue;
+            }
 
-            // A structure whose computed worst case is <= $0 is a quote-integrity failure,
-            // never an opportunity — surface it as rejected with the real reason.
-            if (!family.multiExpiration()) {
-                PayoffCurve integrity = PayoffCurve.of(built.legs(), 1);
-                if (!integrity.maxLossUnbounded() && integrity.maxLossCents() <= 0) {
-                    rejected.add(new Rejection(family.name(), family.display(),
-                            List.of("Priced as risk-free by the current quotes — impossible; stale or crossed data, skipped")));
-                    continue;
+            // DYNAMIC EXPIRY: build and screen this family across every liquid candidate expiration.
+            // Do not collapse the packages here using raw EV/max-loss: that happens before costs,
+            // realized-volatility evidence, objective fit, tail risk, and evidence quality exist.
+            // The existing DecisionPolicy evaluates this complete set and chooses the family's
+            // representative afterward. The first anchor-nearest rejection remains the teaching
+            // reason only when no expiry produces a viable package.
+            boolean builtOnHeldShares = sharesHeld && family.needsStock();
+            List<Candidate> familyCandidates = new ArrayList<>();
+            Rejection firstRejection = null;
+            for (ExpiryCtx ctx : contexts) {
+                List<StrategyBuilder.Built> builtAlternatives = StrategyBuilder.buildAlternatives(
+                        family, ctx.chain(), ctx.farChain(), ctx.spot(), hints);
+                for (StrategyBuilder.Built built : builtAlternatives) {
+
+                    // A structure whose computed worst case is <= $0 is a quote-integrity failure.
+                    if (!family.multiExpiration()) {
+                        PayoffCurve integrity = PayoffCurve.of(built.legs(), 1);
+                        if (!integrity.maxLossUnbounded() && integrity.maxLossCents() <= 0) {
+                            if (firstRejection == null) firstRejection = new Rejection(family.name(), family.display(),
+                                    List.of("Priced as risk-free by the current quotes — impossible; stale or crossed data, skipped"));
+                            continue;
+                        }
+                    }
+
+                    long coverSharesPerUnit = builtOnHeldShares
+                            ? Math.max(0, io.liftandshift.strikebench.strategy.CoverageCheck.callCoverSharesNeeded(built.legs()))
+                            : 0;
+                    LocalDate packageEnd = built.legs().stream().filter(leg -> !leg.isStock())
+                            .map(Leg::expiration).max(LocalDate::compareTo).orElse(null);
+                    boolean earningsSoon = eventEvidence.available() && packageEnd != null
+                            && !eventEvidence.confidenceStart().isAfter(packageEnd)
+                            && !eventEvidence.confidenceEnd().isBefore(today);
+                    Verdict verdict = Guardrails.checkForAnalysis(new Guardrails.Proposal(
+                            family, built.legs(), 1, built.quotes(), ctx.spot(), ctx.chain().freshness(), today,
+                            buyingPowerCents, false, avoidEarnings && earningsSoon, false, coverSharesPerUnit));
+                    if (verdict.blocked()) {
+                        if (firstRejection == null) firstRejection = new Rejection(family.name(), family.display(), verdict.blockReasons());
+                        continue;
+                    }
+
+                    CandidateProbe probe = new CandidateProbe();
+                    // A direct acquisition may use the declared purchase capital. Capped-risk
+                    // substitutes remain sized by the ordinary Plan risk budget; otherwise a
+                    // three-lot share request could quietly scale a vertical to the whole account.
+                    long familyBudget = intent == StrategyIntent.ACQUIRE
+                            && !family.needsStock() && family != StrategyFamily.CASH_SECURED_PUT
+                            ? riskBudget : budget;
+                    Candidate candidate = toCandidate(family, built, verdict, ctx.spot(), today, familyBudget, buyingPowerCents,
+                            ctx.chain().freshness(), avoidEarnings, thesis, intent, holdings,
+                            builtOnHeldShares ? coverSharesPerUnit : 0, builtOnHeldShares ? freeShares : 0,
+                            quote, ctx.riskFreeRate(), probe);
+                    if (candidate == null) {
+                        if (firstRejection == null) firstRejection = new Rejection(family.name(), family.display(),
+                                List.of(probe.reason != null ? probe.reason
+                                        : "The current option book cannot produce an executable one-lot package"));
+                        continue;
+                    }
+                    // OBJECTIVE-COHERENCE GATE: a structure whose economics contradict the declared intent
+                    // is never a viable recommendation for it — the engine must not offer a "pay-to-earn-
+                    // income" debit or a can't-profit package. (This is the offer-time enforcement of the
+                    // same carry/coherence idea the eval layer already annotates on a selected position.)
+                    String incoherence = intentIncoherence(intent, family, candidate);
+                    if (incoherence != null) {
+                        if (firstRejection == null) firstRejection = new Rejection(family.name(), family.display(), List.of(incoherence));
+                        continue;
+                    }
+                    String viability = packageViability(family, candidate);
+                    if (viability != null) {
+                        if (firstRejection == null) firstRejection = new Rejection(
+                                family.name(), family.display(), List.of(viability));
+                        continue;
+                    }
+                    if (candidate.confidence() < minConfidence) {
+                        if (firstRejection == null) firstRejection = new Rejection(family.name(), family.display(),
+                                List.of(String.format("Confidence %.2f is below your minimum %.2f", candidate.confidence(), minConfidence)));
+                        continue;
+                    }
+                    String filterReason = failsFilter(candidate, filters);
+                    if (filterReason != null) {
+                        if (firstRejection == null) firstRejection = new Rejection(family.name(), family.display(), List.of(filterReason));
+                        continue;
+                    }
+                    familyCandidates.add(candidate);
                 }
             }
-
-            int coverLotsPerUnit = builtOnHeldShares
-                    ? Math.max(0, io.liftandshift.strikebench.strategy.CoverageCheck.callCoverLotsNeeded(built.legs()))
-                    : 0;
-            Verdict verdict = Guardrails.check(new Guardrails.Proposal(
-                    family, built.legs(), 1, built.quotes(), spot, chain.freshness(), today,
-                    buyingPowerCents, false, avoidEarnings && earningsSoon, false, coverLotsPerUnit));
-            if (verdict.blocked()) {
-                rejected.add(new Rejection(family.name(), family.display(), verdict.blockReasons()));
-                continue;
+            if (!familyCandidates.isEmpty()) {
+                candidates.addAll(familyCandidates);
+            } else if (firstRejection != null) {
+                rejected.add(firstRejection);
+            } else {
+                // A family can be valid in the catalog but impossible on this exact surface (for
+                // example, no matching far expiration for a calendar or no executable protective
+                // wing). Preserve that distinction in the response instead of making the family
+                // disappear, which clients and users reasonably interpret as incomplete coverage.
+                rejected.add(new Rejection(family.name(), family.display(), List.of(
+                        "No canonical " + family.display().toLowerCase(Locale.ROOT)
+                                + " package could be built from the available same-lane contracts near this horizon.")));
             }
-
-            Candidate candidate = toCandidate(family, built, verdict, spot, today, budget, buyingPowerCents,
-                    chain.freshness(), avoidEarnings, thesis, intent, holdings,
-                    builtOnHeldShares ? coverLotsPerUnit : 0, builtOnHeldShares ? freeShares : 0,
-                    quote, riskFreeRate);
-            if (candidate == null) {
-                rejected.add(new Rejection(family.name(), family.display(),
-                        List.of("Minimum position size exceeds the risk budget of " + Money.fmt(budget))));
-                continue;
-            }
-            if (candidate.confidence() < minConfidence) {
-                rejected.add(new Rejection(family.name(), family.display(),
-                        List.of(String.format("Confidence %.2f is below your minimum %.2f", candidate.confidence(), minConfidence))));
-                continue;
-            }
-            String filterReason = failsFilter(candidate, filters);
-            if (filterReason != null) {
-                rejected.add(new Rejection(family.name(), family.display(), List.of(filterReason)));
-                continue;
-            }
-            candidates.add(candidate);
         }
 
         // Always show a blocked undefined-risk example for education, even if not requested
         if (rejected.stream().noneMatch(r -> r.strategy().equals(StrategyFamily.NAKED_CALL.name()))) {
             StrategyBuilder.Built naked = StrategyBuilder.build(StrategyFamily.NAKED_CALL, chain, farChain, spot);
             if (naked != null) {
-                Verdict v = Guardrails.check(new Guardrails.Proposal(StrategyFamily.NAKED_CALL, naked.legs(), 1,
+                Verdict v = Guardrails.checkForAnalysis(new Guardrails.Proposal(StrategyFamily.NAKED_CALL, naked.legs(), 1,
                         naked.quotes(), spot, chain.freshness(), today, buyingPowerCents, false, false, false));
                 rejected.add(new Rejection(StrategyFamily.NAKED_CALL.name(), StrategyFamily.NAKED_CALL.display(),
                         v.blockReasons().isEmpty() ? List.of("Undefined risk — blocked by default") : v.blockReasons()));
             }
         }
 
-        candidates.sort(Comparator.comparingDouble(Candidate::score).reversed());
-        // RANKING TRUTH: the engine returns the COMPLETE score-sorted list. Structural diversity
-        // is a PRESENTATION concern (the UI may summarize with representatives per shape group,
-        // with a Show-all affordance) — it must never rewrite the engine's ranked truth.
+        // Return the complete, bounded construction field. StrategyBuilder preserves materially
+        // different short-boundary and wing-width strata; DecisionPolicy remains the sole owner of
+        // recommendation ranking and endorsement across those exact packages.
         if (candidates.isEmpty()) notes.add("No strategy passed the risk screens for this combination — try a wider risk budget or different horizon");
-        return new Result(symbol, thesis.name(), req.horizon(), mode.name(), intent.name(), budget, candidates, rejected, notes, DISCLAIMER);
+        return new Result(symbol, thesis.name(), horizon, mode.name(), intent.name(), budget,
+                spot.movePointRight(2).setScale(0, java.math.RoundingMode.HALF_UP).longValue(), candidates, rejected, notes, DISCLAIMER);
     }
 
     /**
@@ -355,10 +442,6 @@ public final class RecommendationEngine {
 
     /** World-aware twin of recommend(req, bp, worldId) — same CALL-scoped discipline. */
     public LadderResult ladder(Request req, long buyingPowerCents, String worldId) {
-        return ladderInner(req, buyingPowerCents, worldId);
-    }
-
-    private LadderResult ladderInner(Request req, long buyingPowerCents, String worldId) {
         StrategyIntent intent = StrategyIntent.parse(req.intent());
         StrategyFamily family = switch (intent) {
             case ACQUIRE -> StrategyFamily.CASH_SECURED_PUT;
@@ -369,36 +452,34 @@ public final class RecommendationEngine {
         };
         String symbol = req.symbol() == null ? "" : req.symbol().trim().toUpperCase(Locale.ROOT);
         List<String> notes = new ArrayList<>();
-        java.time.Instant ladderNow = market.simInstant(worldId).orElseGet(clock::instant);
-        if (worldId == null && !MarketHours.isRegularSession(ladderNow)) {
-            notes.add("The market is closed — these rungs are measured off the PRIOR CLOSE and can shift at the open.");
-        }
         Holdings holdings = req.holdings();
         Filters filters = req.filters() == null ? new Filters(null, null, null, null) : req.filters();
         int freeShares = holdings != null && holdings.sharesOwned() != null ? Math.max(0, holdings.sharesOwned()) : 0;
         boolean sharesHeld = freeShares >= 100 && intent != StrategyIntent.ACQUIRE;
 
-        var lane = market.lane(worldId);
-        Quote quote = market.quote(symbol, worldId).orElse(null);
-        List<LocalDate> expirations = quote == null ? List.of() : market.expirations(symbol, worldId);
-        if (quote == null || !quote.optionable() || expirations.isEmpty()) {
-            notes.add(quote == null ? missingMarketDataNote(lane, symbol)
-                    : symbol + " has no listed options");
+        SymbolReady ready = preflightSymbol(symbol, worldId, notes);
+        if (ready == null) {
             return new LadderResult(symbol, intent.name(), List.of(), notes, DISCLAIMER);
         }
-        if (!quote.evidence().usableIn(lane)) {
-            notes.add("No " + lane + "-lane quote is available for " + symbol);
-            return new LadderResult(symbol, intent.name(), List.of(), notes, DISCLAIMER);
+        var lane = ready.lane();
+        Quote quote = ready.quote();
+        List<LocalDate> expirations = ready.expirations();
+        java.time.Instant ladderNow = ready.laneNow();
+        LocalDate today = ready.today();
+        String horizon = effectiveHorizon(req.horizon(), intent);
+        if (req.horizon() == null || req.horizon().isBlank()) {
+            notes.add(intent == StrategyIntent.INCOME
+                    ? "No horizon was supplied; using a 30-session income cycle."
+                    : "No horizon was supplied; using the month analysis bucket.");
         }
-        LocalDate today = LocalDate.ofInstant(ladderNow, MarketHours.EASTERN);
-        LocalDate near = pickExpiration(expirations, req.horizon(), today, false, ladderNow, notes);
+        LocalDate near = pickExpiration(expirations, horizon, today, false, ladderNow, notes);
         OptionChain chain = near == null ? null : market.chain(symbol, near, worldId).orElse(null);
         if (chain == null || chain.isEmpty()) {
             notes.add("Option chain unavailable for " + symbol);
             return new LadderResult(symbol, intent.name(), List.of(), notes, DISCLAIMER);
         }
-        if (!chain.evidence().executableIn(lane)) {
-            notes.add("The " + lane + " market has no executable option chain for " + symbol);
+        if (!chain.evidence().usableIn(lane)) {
+            notes.add("The " + lane + " market has no same-lane option chain for " + symbol);
             return new LadderResult(symbol, intent.name(), List.of(), notes, DISCLAIMER);
         }
         double riskFreeRate = market.riskFreeRateQuote(
@@ -408,11 +489,10 @@ public final class RecommendationEngine {
         // its cash-secured purchase commitment is the product and is disclosed as such. EXIT and
         // HEDGE never inflate the selected per-idea budget merely to manufacture a rung.
         RiskMode mode = RiskMode.parse(req.riskMode());
-        double riskPct = req.maxRiskPctOfAccount() != null ? Math.clamp(req.maxRiskPctOfAccount(), 0.001, 0.5) : mode.defaultRiskPct;
         long budget = intent == StrategyIntent.ACQUIRE && req.maxRiskPctOfAccount() == null && req.maxLossCents() == null
                 ? buyingPowerCents
-                : Math.min(Math.round(buyingPowerCents * riskPct) == 0 ? buyingPowerCents : Math.round(buyingPowerCents * riskPct),
-                           req.maxLossCents() != null && req.maxLossCents() > 0 ? req.maxLossCents() : Long.MAX_VALUE);
+                : RiskBudgetPolicy.requestBudgetCents(
+                        mode, buyingPowerCents, req.maxRiskPctOfAccount(), req.maxLossCents());
 
         // Rung strikes: EXIT climbs above spot, ACQUIRE/HEDGE step below it
         List<BigDecimal> strikes = new ArrayList<>();
@@ -434,11 +514,12 @@ public final class RecommendationEngine {
             // Only accept the rung whose short/long strike is EXACTLY k (target snapping can dedupe)
             boolean exact = built.legs().stream().anyMatch(l -> !l.isStock() && l.strike().compareTo(k) == 0);
             if (!exact) continue;
-            int coverLots = sharesHeld ? Math.max(0, io.liftandshift.strikebench.strategy.CoverageCheck.callCoverLotsNeeded(built.legs())) : 0;
+            long coverShares = sharesHeld
+                    ? Math.max(0, io.liftandshift.strikebench.strategy.CoverageCheck.callCoverSharesNeeded(built.legs())) : 0;
             Candidate c = toCandidate(family, built, Verdict.of(List.of(), List.of()), spot, today, budget,
                     buyingPowerCents, chain.freshness(), true, StrategyFamily.Thesis.NEUTRAL,
-                    intent, holdings, sharesHeld ? coverLots : 0, sharesHeld ? freeShares : 0,
-                    quote, riskFreeRate);
+                    intent, holdings, sharesHeld ? coverShares : 0, sharesHeld ? freeShares : 0,
+                    quote, riskFreeRate, new CandidateProbe());
             if (c == null) continue;
             String filterReason = failsFilter(c, filters);
             if (filterReason != null) {
@@ -469,6 +550,38 @@ public final class RecommendationEngine {
         return new LadderResult(symbol, intent.name(), rungs, notes, DISCLAIMER);
     }
 
+    /** The lane clock, a usable quote, its expirations, and today's lane date — the shared symbol
+     *  readiness both recommend() and ladder() need. Null means "not tradable in this lane"; the
+     *  reason is appended to {@code notes}. One determination, so the two surfaces cannot drift. */
+    private record SymbolReady(java.time.Instant laneNow, LocalDate today,
+                               io.liftandshift.strikebench.market.MarketLane lane, Quote quote,
+                               List<LocalDate> expirations) {}
+
+    private SymbolReady preflightSymbol(String symbol, String worldId, List<String> notes) {
+        // ONE CLOCK PER LANE: a simulated session's clock is always in-session while it runs — the
+        // observed market being closed says nothing about THIS market (review P2).
+        java.time.Instant laneNow = market.laneNow(worldId, clock);
+        if (worldId == null && !MarketHours.isRegularSession(laneNow)) {
+            notes.add("The market is closed — prices and strikes here are anchored to the PRIOR CLOSE, "
+                    + "not a live quote, and can shift at the next open.");
+        }
+        io.liftandshift.strikebench.market.MarketLane lane = market.lane(worldId);
+        Quote quote = market.quote(symbol, worldId).orElse(null);
+        if (quote == null) { notes.add(missingMarketDataNote(lane, symbol)); return null; }
+        if (!quote.evidence().usableIn(lane)) {
+            notes.add("No " + lane + "-lane quote is available for " + symbol + "; refusing to substitute "
+                    + quote.evidence().provenance() + " data from " + quote.evidence().source());
+            return null;
+        }
+        List<LocalDate> expirations = market.expirations(symbol, worldId);
+        if (!quote.optionable() || expirations.isEmpty()) {
+            notes.add(symbol + " has no listed options (mutual funds and some securities cannot be traded with options)");
+            return null;
+        }
+        return new SymbolReady(laneNow, LocalDate.ofInstant(laneNow, MarketHours.EASTERN),
+                lane, quote, expirations);
+    }
+
     private static String missingMarketDataNote(io.liftandshift.strikebench.market.MarketLane lane,
                                                 String symbol) {
         if (lane == io.liftandshift.strikebench.market.MarketLane.OBSERVED) {
@@ -483,8 +596,8 @@ public final class RecommendationEngine {
     private Candidate toCandidate(StrategyFamily family, StrategyBuilder.Built built, Verdict verdict, BigDecimal spot,
                                   LocalDate today, long budget, long buyingPowerCents, Freshness freshness, boolean avoidEarnings,
                                   StrategyFamily.Thesis thesis, StrategyIntent intent, Holdings holdings,
-                                  int coverLotsPerUnit, int freeShares, Quote underlyingQuote,
-                                  double riskFreeRate) {
+                                  long coverSharesPerUnit, int freeShares, Quote underlyingQuote,
+                                  double riskFreeRate, CandidateProbe probe) {
         // Re-price legs at the EXECUTABLE side (buys pay the ask, sells receive the bid) so
         // the numbers a learner sees here match what a fill would actually cost. Structures
         // whose legs have no executable side are not real opportunities.
@@ -492,24 +605,22 @@ public final class RecommendationEngine {
         for (int i = 0; i < built.legs().size(); i++) {
             io.liftandshift.strikebench.model.Leg leg = built.legs().get(i);
             if (leg.isStock()) {
-                BigDecimal side = leg.action() == LegAction.BUY
-                        ? underlyingQuote.ask() : underlyingQuote.bid();
-                if (side == null || side.signum() <= 0
-                        || (underlyingQuote.bid() != null && underlyingQuote.ask() != null
-                        && underlyingQuote.bid().compareTo(underlyingQuote.ask()) > 0)) {
-                    return null;
+                BigDecimal side = io.liftandshift.strikebench.market.ExecutablePrice.forAction(
+                        underlyingQuote.bid(), underlyingQuote.ask(), leg.action());
+                if (side == null) {
+                    return candidateFailure(probe, "The stock leg has no executable two-sided quote");
                 }
                 executableLegs.add(Leg.stock(leg.action(), leg.ratio(), side));
                 continue;
             }
             OptionQuote q = built.quotes().get(i);
-            BigDecimal side = leg.action() == io.liftandshift.strikebench.model.LegAction.BUY ? q.ask() : q.bid();
-            if (side == null || side.signum() <= 0
-                    || (q.bid() != null && q.ask() != null && q.bid().compareTo(q.ask()) > 0)) {
-                return null; // one-sided, empty, or crossed book — unbuildable in reality
+            BigDecimal side = io.liftandshift.strikebench.market.ExecutablePrice.forAction(
+                    q.bid(), q.ask(), leg.action());
+            if (side == null) {
+                return candidateFailure(probe, "An option leg has no executable two-sided quote");
             }
             executableLegs.add(new io.liftandshift.strikebench.model.Leg(leg.action(), leg.type(), leg.strike(),
-                    leg.expiration(), leg.ratio(), side));
+                    leg.expiration(), leg.ratio(), side, leg.multiplier()));
         }
         built = new StrategyBuilder.Built(executableLegs, built.quotes(), built.label());
         PayoffCurve unitCurve = PayoffCurve.of(built.legs(), 1);
@@ -520,11 +631,19 @@ public final class RecommendationEngine {
         // COMBINED position (legs + the held lot at today's price), while budget/reserve math
         // uses the trade's INCREMENTAL cash risk (a covered call adds none; a hedge costs its debit).
         boolean onHeldShares = freeShares > 0 && family.needsStock();
-        int displayLotsPerUnit = onHeldShares ? Math.max(coverLotsPerUnit, 1) : 0;
+        long displaySharesPerUnit = onHeldShares
+                ? Math.max(coverSharesPerUnit,
+                        io.liftandshift.strikebench.strategy.CoverageCheck.shareContextUnitsNeeded(built.legs()))
+                : 0;
+        if (onHeldShares && displaySharesPerUnit <= 0) displaySharesPerUnit = 1;
+        if (onHeldShares && (displaySharesPerUnit > Integer.MAX_VALUE || freeShares < displaySharesPerUnit)) {
+            return candidateFailure(probe, "One package needs " + displaySharesPerUnit
+                    + " free shares, but this account has " + freeShares);
+        }
         List<Leg> unitDisplayLegs = built.legs();
         if (onHeldShares) {
             unitDisplayLegs = new ArrayList<>(built.legs());
-            unitDisplayLegs.add(Leg.stock(LegAction.BUY, displayLotsPerUnit, spot));
+            unitDisplayLegs.add(Leg.stockShares(LegAction.BUY, Math.toIntExact(displaySharesPerUnit), spot));
         }
         PayoffCurve unitDisplayCurve = onHeldShares ? PayoffCurve.of(unitDisplayLegs, 1) : unitCurve;
 
@@ -532,28 +651,61 @@ public final class RecommendationEngine {
         Long unitMaxProfit;
         Long unitCombinedMaxLoss = null;
         if (multiExp) {
-            if (unitEntryNet >= 0) return null; // credit calendars blocked upstream; be safe
+            if (unitEntryNet >= 0) return candidateFailure(probe,
+                    "A multi-expiration credit cannot be bounded honestly");
             unitMaxLoss = -unitEntryNet;
             unitMaxProfit = null;
         } else if (onHeldShares) {
-            if (unitDisplayCurve.maxLossUnbounded()) return null; // shares don't cover this shape
+            if (unitDisplayCurve.maxLossUnbounded()) return candidateFailure(probe,
+                    "The available shares do not bound this structure's risk");
             unitMaxLoss = Math.max(0, -unitEntryNet); // incremental cash risk only
             unitCombinedMaxLoss = unitDisplayCurve.maxLossCents();
             unitMaxProfit = unitDisplayCurve.maxProfitUnbounded() ? null : unitDisplayCurve.maxProfitCents();
         } else {
-            if (unitCurve.maxLossUnbounded()) return null;
+            if (unitCurve.maxLossUnbounded()) return candidateFailure(probe, "Theoretical loss is unlimited");
             unitMaxLoss = unitCurve.maxLossCents();
             unitMaxProfit = unitCurve.maxProfitUnbounded() ? null : unitCurve.maxProfitCents();
         }
+        // CAPITAL is not RISK. A cash-secured put or a buy-write covered call deploys capital you must
+        // HOLD — the strike cash you set aside to buy the shares, or the shares themselves — not a small
+        // slice you are willing to LOSE. Gating these by the per-idea RISK budget is the wrong lens and
+        // silently hid every one of them (a $500 name's cash-secured put needs ~$48k of collateral, far
+        // above a $5k risk cap), so "sell puts to buy at a discount" and "take profit on holdings" never
+        // appeared as income. Collateral-based structures are gated by BUYING POWER (what actually
+        // constrains them), like the ACQUIRE flow, and default to a single lot so one idea never quietly
+        // commits the whole account. Defined-risk structures (spreads, condors, butterflies) keep the
+        // risk budget, where max loss genuinely IS the capital at risk.
+        // Applies ONLY where deploying NEW capital is the point: INCOME (write a cash-secured put or a
+        // buy-write covered call to earn premium) and ACQUIRE (set cash aside to buy at a discount).
+        // EXIT and HEDGE operate on shares you ALREADY hold — a buy-write there is incoherent (you can't
+        // "exit" shares you don't own), so without held shares those stay risk-budget-gated and drop out.
+        // A DIRECTIONAL scan may also surface a cash-secured put (it fits a bullish view), but there it
+        // is a directional bet and must respect the per-idea risk budget, not the whole account.
+        boolean collateralBased = !onHeldShares
+                && (intent == StrategyIntent.INCOME || intent == StrategyIntent.ACQUIRE)
+                && (family.needsStock() || family == StrategyFamily.CASH_SECURED_PUT);
         int qty;
         if (onHeldShares) {
-            if (unitMaxLoss > budget) return null;
-            int lotsAvailable = Math.max(1, freeShares / (100 * displayLotsPerUnit));
-            long byBudget = unitMaxLoss > 0 ? Math.max(1, budget / unitMaxLoss) : lotsAvailable;
-            qty = (int) Math.clamp(Math.min((long) lotsAvailable, byBudget), 1, MAX_QTY);
+            if (unitMaxLoss > budget) return candidateFailure(probe,
+                    "One lot requires " + Money.fmt(unitMaxLoss) + " of incremental risk, above this Plan's "
+                            + Money.fmt(budget) + " budget");
+            int packagesAvailable = (int) (freeShares / displaySharesPerUnit);
+            long byBudget = unitMaxLoss > 0 ? Math.max(1, budget / unitMaxLoss) : packagesAvailable;
+            qty = (int) Math.clamp(Math.min((long) packagesAvailable, byBudget), 1, MAX_QTY);
+        } else if (collateralBased) {
+            long unitCapital = Math.max(unitMaxLoss, Math.max(0, -unitEntryNet)); // collateral or share cost per lot
+            if (unitCapital > buyingPowerCents) return candidateFailure(probe,
+                    "One lot needs " + Money.fmt(unitCapital) + " of capital (collateral or shares), above the account's "
+                            + Money.fmt(buyingPowerCents) + " buying power");
+            long lotsByPower = unitCapital > 0 ? Math.max(1, buyingPowerCents / unitCapital) : 1;
+            int desiredLots = holdings != null && holdings.sharesOwned() != null && holdings.sharesOwned() > 0
+                    ? Math.max(1, holdings.sharesOwned() / 100) : 1;
+            qty = (int) Math.clamp(Math.min((long) desiredLots, lotsByPower), 1, MAX_QTY);
         } else {
             if (unitMaxLoss <= 0 || unitMaxLoss > budget) {
-                if (unitMaxLoss > budget) return null;
+                if (unitMaxLoss > budget) return candidateFailure(probe,
+                        "One lot risks " + Money.fmt(unitMaxLoss) + ", above this Plan's "
+                                + Money.fmt(budget) + " budget");
                 unitMaxLoss = Math.max(unitMaxLoss, 1);
             }
             qty = (int) Math.clamp(budget / unitMaxLoss, 1, MAX_QTY);
@@ -569,7 +721,9 @@ public final class RecommendationEngine {
         // Debits also consume CASH — never suggest a position the account cannot pay for.
         long unitCashNeeded = Math.max(0, -unitEntryNet);
         if (unitCashNeeded > 0) {
-            if (unitCashNeeded > buyingPowerCents) return null;
+            if (unitCashNeeded > buyingPowerCents) return candidateFailure(probe,
+                    "One lot costs " + Money.fmt(unitCashNeeded) + ", above the account's "
+                            + Money.fmt(buyingPowerCents) + " buying power");
             qty = (int) Math.clamp(Math.min((long) qty, buyingPowerCents / unitCashNeeded), 1, MAX_QTY);
         }
 
@@ -624,11 +778,16 @@ public final class RecommendationEngine {
                 .filter(l -> !l.isStock() && l.action() == LegAction.BUY && l.type() == OptionType.PUT)
                 .map(Leg::strike).findFirst().orElse(null);
         List<Leg> optionLegs = built.legs().stream().filter(l -> !l.isStock()).toList();
+        long packageShareUnitsPerUnit = built.legs().stream().filter(Leg::isStock)
+                .mapToLong(leg -> Math.multiplyExact((long) leg.ratio(), leg.multiplier())).sum();
+        if (packageShareUnitsPerUnit <= 0) {
+            packageShareUnitsPerUnit = io.liftandshift.strikebench.strategy.CoverageCheck
+                    .shareContextUnitsNeeded(built.legs());
+        }
+        if (packageShareUnitsPerUnit <= 0) packageShareUnitsPerUnit = Leg.SHARES_PER_CONTRACT;
         long optionNetCents = PayoffCurve.of(optionLegs, qty).entryNetPremiumCents();
-        long optionContracts = 0;
-        for (Leg optionLeg : optionLegs) optionContracts += (long) optionLeg.ratio() * qty;
-        long openingFees = optionContracts * feePerContractCents
-                + (optionLegs.isEmpty() ? 0 : feePerOrderCents);
+        long optionContracts = Fees.optionContracts(optionLegs, qty);
+        long openingFees = Fees.openingCents(optionContracts, feePerContractCents, feePerOrderCents);
         long netOptionIncomeCents = optionNetCents - openingFees;
 
         // Annualized yield is quoted ONLY for share-backed premium (covered calls, cash-secured
@@ -641,8 +800,8 @@ public final class RecommendationEngine {
         Long yieldCollateral = null;
         if (netOptionIncomeCents > 0 && shareBacked) {
             yieldCollateral = family == StrategyFamily.CASH_SECURED_PUT && shortPutStrike != null
-                    ? Money.centsFromPrice(shortPutStrike, 100L * qty)             // full strike cash obligation
-                    : Money.centsFromPrice(spot, 100L * displayLotsPerUnit * qty); // share capital, held or bought
+                    ? Money.centsFromPrice(shortPutStrike, Math.multiplyExact(packageShareUnitsPerUnit, (long) qty))
+                    : Money.centsFromPrice(spot, Math.multiplyExact(packageShareUnitsPerUnit, (long) qty));
         }
         Double annualYieldPct = null;
         if (yieldCollateral != null && yieldCollateral > 0) {
@@ -652,7 +811,8 @@ public final class RecommendationEngine {
         // Effective share prices are strike +/- NET option premium per share after opening fees —
         // a buy-write's stock purchase must not leak into it (it made "effective sell $10/sh" nonsense once).
         BigDecimal perShareNet = BigDecimal.valueOf(netOptionIncomeCents)
-                .divide(BigDecimal.valueOf(100L * qty), 2, java.math.RoundingMode.HALF_UP)
+                .divide(BigDecimal.valueOf(Math.multiplyExact(packageShareUnitsPerUnit, (long) qty)),
+                        2, java.math.RoundingMode.HALF_UP)
                 .movePointLeft(2); // cents -> dollars per share
         String effectivePrice = null;
         if ((family == StrategyFamily.COVERED_CALL || family == StrategyFamily.PROTECTIVE_COLLAR)
@@ -671,24 +831,6 @@ public final class RecommendationEngine {
             case FIXTURE -> 0.45;
             default -> 0.40;
         };
-        double rr = maxProfit == null ? 0.6 : Math.min(3.0, maxProfit / (double) Math.max(1, maxLoss)) / 3.0;
-        double popScore = pop == null ? 0.5 : pop;
-        double capEff = Math.clamp(1.0 - maxLoss / (double) Math.max(1, budget), 0, 1);
-        double event = 1.0 - (zeroDte ? 0.4 : 0);
-        double score = 100 * (0.15 * freshScore + 0.20 * liquidity + 0.15 * rr + 0.25 * popScore + 0.10 * capEff + 0.15 * event);
-        // Intent-aware rank adjustments, kept small and explainable: income flows prefer richer
-        // annualized yield with tolerable assignment odds; exit/acquire flows prefer candidates
-        // that actually reach the user's target price.
-        BigDecimal target = holdings != null && holdings.targetPriceCents() != null && holdings.targetPriceCents() > 0
-                ? Money.priceFromCents(holdings.targetPriceCents()) : null;
-        if (intent == StrategyIntent.INCOME && annualYieldPct != null) {
-            score += Math.min(15, annualYieldPct / 2.0) - (assignProb == null ? 0 : assignProb * 10);
-        } else if (intent == StrategyIntent.EXIT && target != null && shortCallStrike != null) {
-            if (shortCallStrike.compareTo(target) >= 0) score += 10;
-        } else if (intent == StrategyIntent.ACQUIRE && target != null && shortPutStrike != null) {
-            if (shortPutStrike.compareTo(target) <= 0) score += 10;
-        }
-        score = Math.clamp(score, 0, 100);
         double modelConf = multiExp ? 0.4 : ivMissing ? 0.5 : (pop != null ? 0.9 : 0.6);
         double confidence = Math.clamp(0.40 * freshScore + 0.35 * liquidity + 0.25 * modelConf, 0, 1);
 
@@ -698,10 +840,10 @@ public final class RecommendationEngine {
                              : "Uncapped upside past " + (breakevens.isEmpty() ? "the breakeven" : "$" + breakevens.getFirst()));
         String risk = onHeldShares
                 ? (maxLoss > 0
-                    ? "Costs " + Money.fmt(maxLoss) + " in premium; your " + (100 * displayLotsPerUnit * qty)
+                    ? "Costs " + Money.fmt(maxLoss) + " in premium; your " + (displaySharesPerUnit * qty)
                         + " shares keep their own downside" + (combinedMaxLoss != null
                             ? " — worst case incl. shares from today's price: " + Money.fmt(combinedMaxLoss) : "") + ". Fees come on top."
-                    : "No new cash at risk — but your " + (100 * displayLotsPerUnit * qty)
+                    : "No new cash at risk — but your " + (displaySharesPerUnit * qty)
                         + " shares keep their downside, and gains above the short strike go to the call buyer. Fees come on top.")
                 : "Max loss " + Money.fmt(maxLoss) + " (" + qty + "x) if the underlying "
                 + switch (thesis) {
@@ -723,27 +865,52 @@ public final class RecommendationEngine {
                     + "Sized to keep worst case within your " + Money.fmt(budget) + " risk budget."
                 : family.display() + " serves “" + intent.display() + "”: " + intent.blurb() + " "
                     + (pop != null ? String.format("Modeled probability of profit ~%.0f%%. ", pop * 100) : "")
-                    + (maxLoss > 0 ? "Sized to keep new cash at risk within your " + Money.fmt(budget) + " budget." : "");
-        String beginner = beginnerText(family, entryNet);
+                    // Collateral-based income (a cash-secured put or a buy-write covered call) deploys
+                    // CAPITAL you set aside, not a slice of the risk budget — say so, so its five-figure
+                    // "max loss" reads as the collateral it is, not a fee. Defined-risk ideas keep the
+                    // risk-budget framing, where max loss genuinely IS the capital at risk.
+                    + (collateralBased
+                        ? "Sized by your buying power — it sets aside " + Money.fmt(maxLoss) + " of capital"
+                            + (family == StrategyFamily.CASH_SECURED_PUT
+                                ? " (the cash to buy the shares at the strike if you are assigned)"
+                                : family.needsStock() ? " (the 100 shares the call is written against)" : "")
+                            + ", within your " + Money.fmt(buyingPowerCents) + " account — this is collateral you hold, not a fee you lose."
+                        : maxLoss > 0 ? "Sized to keep new cash at risk within your " + Money.fmt(budget) + " budget." : "");
+        boolean includesStockLeg = built.legs().stream().anyMatch(Leg::isStock);
+        String beginner = beginnerText(family, entryNet, optionNetCents, includesStockLeg);
         String intentNote = intentNote(intent, family, holdings, spot, qty, netOptionIncomeCents, minDte,
                 effectivePrice, assignProb, annualYieldPct, shortCallStrike, shortPutStrike, longPutStrike,
-                onHeldShares, displayLotsPerUnit);
+                onHeldShares, packageShareUnitsPerUnit);
 
         List<String> candidateWarnings = new ArrayList<>(verdict.warnings());
         if (ivMissing && !multiExp) {
             candidateWarnings.add("No implied volatility available — POP/EV assume a 30% placeholder volatility");
         }
+        List<LegView> legViews = new ArrayList<>(built.legs().size());
+        for (int i = 0; i < built.legs().size(); i++) {
+            OptionQuote quoteReceipt = i < built.quotes().size() ? built.quotes().get(i) : null;
+            legViews.add(LegView.of(built.legs().get(i), quoteReceipt));
+        }
         return new Candidate(family.name(), family.display(), family.structureGroup(), built.label(),
-                built.legs().stream().map(LegView::of).toList(), qty,
+                List.copyOf(legViews), qty,
                 entryNet, maxProfit, maxLoss, breakevens, pop, ev,
                 round2(liquidity), freshness.name(), candidateWarnings,
-                round2(score), round2(confidence), why, upside, risk, invalidate, beginner,
+                round2(confidence), why, upside, risk, invalidate, beginner,
                 intent.name(), family.intents().stream().map(Enum::name).sorted().toList(),
                 assignProb,
                 annualYieldPct, effectivePrice, intentNote,
                 onHeldShares ? Boolean.TRUE : null,
-                onHeldShares ? coverLotsPerUnit * 100 * qty : null,
+                onHeldShares ? Math.toIntExact(Math.multiplyExact(displaySharesPerUnit, (long) qty)) : null,
                 combinedMaxLoss);
+    }
+
+    private static final class CandidateProbe {
+        private String reason;
+    }
+
+    private static Candidate candidateFailure(CandidateProbe probe, String reason) {
+        if (probe != null) probe.reason = reason;
+        return null;
     }
 
     /**
@@ -827,8 +994,8 @@ public final class RecommendationEngine {
                                      BigDecimal spot, int qty, long netOptionPremium, int minDte,
                                      String effectivePrice, Double assignProb, Double annualYieldPct,
                                      BigDecimal shortCallStrike, BigDecimal shortPutStrike, BigDecimal longPutStrike,
-                                     boolean onHeldShares, int displayLotsPerUnit) {
-        int shares = 100 * Math.max(displayLotsPerUnit, 1) * qty;
+                                     boolean onHeldShares, long displaySharesPerUnit) {
+        long shares = Math.multiplyExact(Math.max(displaySharesPerUnit, 1), (long) qty);
         String assignPct = assignProb == null ? null : String.format("~%.0f%%", assignProb * 100);
         Long basis = holdings == null ? null : holdings.costBasisCents();
         switch (intent) {
@@ -851,6 +1018,23 @@ public final class RecommendationEngine {
                 return sb.toString().trim();
             }
             case ACQUIRE -> {
+                if (family == StrategyFamily.CREDIT_PUT_SPREAD) {
+                    return "Capped-risk alternative to a cash-secured put: the long put limits the "
+                            + "downside while the short put earns premium. It expresses the desired-price "
+                            + "view but normally settles as a spread; it is not a reliable way to receive shares.";
+                }
+                if (family == StrategyFamily.DEBIT_CALL_SPREAD) {
+                    return "Capped-risk upside alternative while waiting for the desired stock price. "
+                            + "It participates if the shares run away from your target, but it cannot deliver "
+                            + "shares; the debit is the defined risk.";
+                }
+                if (family == StrategyFamily.CALENDAR_PUT) {
+                    return "Staged acquisition with time protection: the near put can assign shares at $"
+                            + (shortPutStrike == null ? "the selected strike"
+                            : shortPutStrike.stripTrailingZeros().toPlainString())
+                            + " while the farther-dated long put remains as a downside floor. It requires "
+                            + "active management and does not guarantee share delivery.";
+                }
                 if (shortPutStrike == null) return null;
                 StringBuilder sb = new StringBuilder();
                 sb.append("If assigned you buy ").append(shares).append(" shares at $")
@@ -922,11 +1106,32 @@ public final class RecommendationEngine {
         return Math.clamp(1.0 - worstSpread / 0.15, 0, 1);
     }
 
-    private static String beginnerText(StrategyFamily family, long entryNet) {
-        String cash = entryNet >= 0
-                ? "You collect " + Money.fmt(entryNet) + " up front and keep it if the trade works out."
-                : "You pay " + Money.fmt(-entryNet) + " up front — that payment is the most you can lose"
-                    + (family.needsStock() ? " on the options portion" : family.multiExpiration() ? "" : "") + ".";
+    private static String beginnerText(StrategyFamily family, long entryNet, long optionEntryNet,
+                                       boolean includesStockLeg) {
+        String cash;
+        if (family.needsStock()) {
+            String optionCash = optionEntryNet > 0
+                    ? "The option legs collect " + Money.fmt(optionEntryNet) + " net up front."
+                    : optionEntryNet < 0
+                        ? "The option legs cost " + Money.fmt(-optionEntryNet) + " net up front."
+                        : "The option legs have no net entry premium.";
+            if (includesStockLeg) {
+                String packageCash = entryNet > 0
+                        ? "The complete stock-plus-options package collects " + Money.fmt(entryNet) + " net up front."
+                        : entryNet < 0
+                            ? "The complete stock-plus-options package costs " + Money.fmt(-entryNet) + " up front."
+                            : "The complete stock-plus-options package has no net entry payment.";
+                cash = packageCash + " " + optionCash
+                        + " The shares are part of that package value and keep their own upside and downside.";
+            } else {
+                cash = optionCash + " Your existing shares remain a separate source of gain or loss.";
+            }
+        } else {
+            cash = entryNet >= 0
+                    ? "You collect " + Money.fmt(entryNet) + " up front and keep it if the trade works out."
+                    : "You pay " + Money.fmt(-entryNet)
+                        + " up front — that payment is the most you can lose.";
+        }
         return switch (family) {
             case LONG_CALL -> "Buying a call is a bet the stock rises above the strike before expiration. " + cash;
             case LONG_PUT -> "Buying a put is a bet the stock falls below the strike before expiration. " + cash;
@@ -939,7 +1144,12 @@ public final class RecommendationEngine {
             case LONG_CALL_BUTTERFLY, LONG_PUT_BUTTERFLY -> "A pinned bet that the stock finishes near the middle strike. Cheap to buy, capped both ways. " + cash;
             case CALENDAR_CALL, CALENDAR_PUT -> "You sell a near-term option and buy a longer one at the same strike, hoping time decays the near one faster. " + cash;
             case DIAGONAL_CALL, DIAGONAL_PUT -> "Like a calendar but the strikes differ, adding a directional lean. " + cash;
-            case COVERED_CALL -> "You own 100 shares and rent them out by selling a call; income now, upside capped. " + cash;
+            case COVERED_CALL -> (includesStockLeg
+                    ? "You buy shares and rent them out by selling a call; income now, upside capped. "
+                    : "You own shares and rent them out by selling a call; income now, upside capped. ") + cash;
+            case COVERED_STRANGLE -> "A covered call plus a cash-secured put: you collect two premiums, cap the upside, and stand ready to buy 100 more shares at the put strike. " + cash;
+            case COVERED_CALL_PUT_SPREAD -> "You own shares, rent out the upside with a call, and use the premium to buy a put spread - a protected shelf that absorbs losses down to the lower put strike. " + cash;
+            case COVERED_CALL_CALL_OVERLAY -> "A covered call plus a farther long call: income now, and if the stock runs past the overlay strike your upside participation resumes. " + cash;
             case CASH_SECURED_PUT -> "You sell a put with the cash set aside to buy the shares if assigned — getting paid to bid below the market. " + cash;
             case PROTECTIVE_COLLAR -> "You own shares, buy a put as a floor, and sell a call to pay for it. " + cash;
             case PROTECTIVE_PUT -> "You own shares and buy a put as insurance: a guaranteed minimum sale price until expiration. " + cash;
@@ -947,9 +1157,6 @@ public final class RecommendationEngine {
         };
     }
 
-    private static double round2(double v) {
-        return Math.round(v * 100.0) / 100.0;
-    }
 
     private static StrategyFamily.Thesis parseThesis(String s) {
         if (s == null) return StrategyFamily.Thesis.NEUTRAL;
@@ -957,14 +1164,165 @@ public final class RecommendationEngine {
         catch (IllegalArgumentException e) { return StrategyFamily.Thesis.NEUTRAL; }
     }
 
+    /** Internal callers historically relied on Horizon.parse(null) silently becoming month.
+     * Keep compatibility explicit and make income's neutral starting cycle 30 trading sessions.
+     * Public decision routes still reject an absent declaration before this engine is reached. */
+    static String effectiveHorizon(String requested, StrategyIntent intent) {
+        if (requested != null && !requested.isBlank()) return requested.trim();
+        return intent == StrategyIntent.INCOME ? "30d" : "month";
+    }
+
+    /** How many liquid expirations the dynamic search evaluates per family, nearest-anchor first. */
+    private static final int MAX_EXPIRY_CANDIDATES = 4;
+    /** A tradeable chain needs at least this many two-sided strikes bracketing spot; below it, an
+     *  expiration is a mirage that can never produce a fillable structure and is skipped. */
+    private static final int MIN_LIQUID_STRIKES = 6;
+
+    /** One expiration's fully-resolved build context for the dynamic-expiry search. */
+    private record ExpiryCtx(LocalDate near, OptionChain chain, OptionChain farChain, BigDecimal spot,
+                             double riskFreeRate) {}
+
+    /** Exact horizon → calendar days. "Nd" sessions convert at 7/5; the named buckets fall back to
+     *  their calendar span. This is only the ANCHOR — the search spans liquid expirations around it. */
+    private static int horizonAnchorCalendarDays(String horizon) {
+        return io.liftandshift.strikebench.model.Horizon.expiryCalendarDays(horizon);
+    }
+
+    /** The liquid, same-lane analysis expirations nearest the horizon anchor, nearest first, up to
+     *  maxCount. A stale observed close may support labeled analysis but never execution; the
+     *  decision/preview boundary owns that stricter gate. Each context carries its own spot, far
+     *  chain (for calendars/diagonals) and risk-free rate. */
+    private List<ExpiryCtx> expiryContexts(String symbol, String worldId, List<LocalDate> expirations,
+            int anchorDays, LocalDate today, java.time.Instant now,
+            io.liftandshift.strikebench.market.MarketLane lane, boolean allow0dte, int maxCount) {
+        List<LocalDate> usable = expirations.stream()
+                .filter(d -> !d.isBefore(today))
+                .filter(d -> !MarketHours.contractDead(d, now))
+                .filter(d -> allow0dte || !d.equals(today))
+                .sorted(Comparator.comparingLong(d -> Math.abs(ChronoUnit.DAYS.between(today, d) - anchorDays)))
+                .toList();
+        List<ExpiryCtx> ctxs = new ArrayList<>();
+        for (LocalDate exp : usable) {
+            if (ctxs.size() >= maxCount) break;
+            OptionChain chain = market.chain(symbol, exp, worldId).orElse(null);
+            if (chain == null || chain.isEmpty() || !chain.evidence().usableIn(lane)) continue;
+            BigDecimal spot = chain.underlyingPrice();
+            if (spot == null || spot.signum() <= 0 || executableStrikesNearSpot(chain, spot) < MIN_LIQUID_STRIKES) continue;
+            int idx = expirations.indexOf(exp);
+            LocalDate far = idx >= 0 && idx + 4 < expirations.size() ? expirations.get(idx + 4)
+                    : expirations.getLast().isAfter(exp) ? expirations.getLast() : null;
+            OptionChain farChain = far == null ? null : market.chain(symbol, far, worldId).orElse(null);
+            if (farChain != null && !farChain.evidence().usableIn(lane)) farChain = null;
+            double rfr = market.riskFreeRateQuote((int) Math.max(1, ChronoUnit.DAYS.between(today, exp)), worldId).annualRate();
+            ctxs.add(new ExpiryCtx(exp, chain, farChain, spot, rfr));
+        }
+        return ctxs;
+    }
+
+    /** Strikes within ±15% of spot with a two-sided CALL observation — a liquidity proxy. The
+     *  enclosing evidence receipt determines whether those observations are fresh enough to execute. */
+    private static int executableStrikesNearSpot(OptionChain chain, BigDecimal spot) {
+        double s = spot.doubleValue(), lo = s * 0.85, hi = s * 1.15;
+        return (int) chain.calls().stream()
+                .filter(q -> q.strike() != null && q.strike().doubleValue() >= lo && q.strike().doubleValue() <= hi)
+                .filter(q -> q.bid() != null && q.ask() != null && q.bid().signum() > 0 && q.ask().signum() > 0
+                        && q.ask().compareTo(q.bid()) >= 0)
+                .count();
+    }
+
+    /**
+     * OBJECTIVE-COHERENCE GATE (offer time). Rejects any structure whose economics contradict the
+     * declared intent, so the engine never presents an outcome incompatible with the objective:
+     *   - DOMINATED (any intent): a bounded structure whose max profit is <= 0 can never make money.
+     *   - INCOME must COLLECT premium: a single-expiration, pure-option income structure that pays a
+     *     net debit is a "pay-to-earn-income" contradiction. Stock-backed families (covered call /
+     *     cash-secured put / collar) are excluded from the debit test — their entry nets the share
+     *     cost, while the income is the option credit — and multi-expiration calendars are exempt
+     *     because their income is theta collected over rolls, not an entry credit.
+     * Returns a human reason to reject, or null when the structure is coherent with the intent.
+     */
+    private static String intentIncoherence(StrategyIntent intent, StrategyFamily family, Candidate c) {
+        if (c.maxProfitCents() != null && c.maxProfitCents() <= 0) {
+            return "At executable prices this structure cannot profit under any outcome (max profit "
+                    + Money.fmt(c.maxProfitCents()) + ") — not a usable trade.";
+        }
+        // TWO-TIER income check (paired with StrategyEvaluator.objectiveCoherence): this is the cheap
+        // GENERATION-time gate on entry cashflow — a single-expiration income structure must COLLECT a
+        // credit. The precise EVAL-time judgment is the carry/theta diagnostic in objectiveCoherence;
+        // a structure offered as income here should read carry-coherent there. Distinct inputs at
+        // distinct stages, intentionally — not a duplicate check.
+        if (intent == StrategyIntent.INCOME && !family.multiExpiration() && !family.needsStock()
+                && c.entryNetPremiumCents() <= 0) {
+            return "Earning income means COLLECTING premium, but this structure pays a net debit of "
+                    + Money.fmt(-c.entryNetPremiumCents())
+                    + " at entry — it costs money to hold rather than paying you to wait.";
+        }
+        return null;
+    }
+
+    /** Structural viability only; the complete economics/evidence judgment remains downstream. */
+    static String packageViability(StrategyFamily family, Candidate c) {
+        if (family != StrategyFamily.IRON_CONDOR) return null;
+        long credit = c.entryNetPremiumCents();
+        double grossWidth = (double) c.maxLossCents() + credit;
+        double creditToWidth = grossWidth > 0 ? credit / grossWidth : 0.0;
+        double wingBalance = condorWingBalance(c);
+        IronCondorQuality.Assessment quality = IronCondorQuality.assessRatios(
+                creditToWidth, wingBalance, credit > 0 && credit < grossWidth);
+        if (quality.viable()) return null;
+
+        List<String> reasons = new ArrayList<>();
+        if (!quality.positiveBoundedCredit() || !quality.adequateCredit()) {
+            reasons.add(String.format(Locale.ROOT,
+                    "executable credit %s is %.1f%% of the widest wing (minimum %.0f%%)",
+                    Money.fmt(Math.max(0, credit)), quality.creditToWidestWing() * 100.0,
+                    IronCondorQuality.MIN_CREDIT_TO_WIDEST_WING * 100.0));
+        }
+        if (!quality.balancedWings()) {
+            reasons.add(String.format(Locale.ROOT,
+                    "the narrower protective wing is only %.1f%% of the wider wing (minimum %.0f%%); that is a broken-wing package, not a canonical range-income condor",
+                    quality.narrowToWideWing() * 100.0,
+                    IronCondorQuality.MIN_NARROW_TO_WIDE_WING * 100.0));
+        }
+        return "Iron condor quality screen: " + String.join("; ", reasons)
+                + ". It remains analyzable as exact legs, but is not an automatic recommendation.";
+    }
+
+    private static double condorWingBalance(Candidate candidate) {
+        if (candidate.legs() == null) return 0.0;
+        BigDecimal longPut = null;
+        BigDecimal shortPut = null;
+        BigDecimal shortCall = null;
+        BigDecimal longCall = null;
+        for (LegView leg : candidate.legs()) {
+            if (leg == null || leg.strike() == null) continue;
+            BigDecimal strike;
+            try { strike = new BigDecimal(leg.strike()); }
+            catch (NumberFormatException e) { return 0.0; }
+            if ("PUT".equalsIgnoreCase(leg.type()) && "BUY".equalsIgnoreCase(leg.action())) {
+                if (longPut != null) return 0.0;
+                longPut = strike;
+            } else if ("PUT".equalsIgnoreCase(leg.type()) && "SELL".equalsIgnoreCase(leg.action())) {
+                if (shortPut != null) return 0.0;
+                shortPut = strike;
+            } else if ("CALL".equalsIgnoreCase(leg.type()) && "SELL".equalsIgnoreCase(leg.action())) {
+                if (shortCall != null) return 0.0;
+                shortCall = strike;
+            } else if ("CALL".equalsIgnoreCase(leg.type()) && "BUY".equalsIgnoreCase(leg.action())) {
+                if (longCall != null) return 0.0;
+                longCall = strike;
+            }
+        }
+        if (longPut == null || shortPut == null || shortCall == null || longCall == null) return 0.0;
+        BigDecimal putWidth = shortPut.subtract(longPut);
+        BigDecimal callWidth = longCall.subtract(shortCall);
+        if (putWidth.signum() <= 0 || callWidth.signum() <= 0) return 0.0;
+        return putWidth.min(callWidth).doubleValue() / putWidth.max(callWidth).doubleValue();
+    }
+
     private static LocalDate pickExpiration(List<LocalDate> expirations, String horizon, LocalDate today,
                                             boolean allow0dte, java.time.Instant now, List<String> notes) {
-        int targetDays = switch (horizon == null ? "month" : horizon.trim().toLowerCase(Locale.ROOT)) {
-            case "0dte" -> 0;
-            case "week" -> 7;
-            case "quarter" -> 90;
-            default -> 35;
-        };
+        int targetDays = io.liftandshift.strikebench.model.Horizon.expiryCalendarDays(horizon);
         List<LocalDate> usable = expirations.stream()
                 .filter(d -> !d.isBefore(today))
                 // A contract whose final bell (4pm ET on expiration day) has passed is DEAD — never
